# AI-Shopping-Results

amazon-kpi-automation/: .env.example  .gitignore  README.md  debug_page.py  fetch_reference.py  process_csv_report.py  pyproject.toml  streamlit_app.py  test_drive.py  test_export.py  test_scraper_only.py
amazon-kpi-automation/docker/: Dockerfile  Dockerfile.prefetch  Dockerfile.streamlit
amazon-kpi-automation/docs/: SP_API_SETUP.md
amazon-kpi-automation/infrastructure/: cloudbuild-dashboard.yaml  cloudbuild-prefetch-job.yaml  cloudbuild.yaml
amazon-kpi-automation/scripts/: setup_cronjob.py
amazon-kpi-automation/src/amazon_kpi/: __init__.py  __main__.py  import_csv.py  main.py
amazon-kpi-automation/src/amazon_kpi/config/: __init__.py  constants.py  sku_categories.py
amazon-kpi-automation/src/amazon_kpi/dashboard/: __init__.py  app.py  data_service.py  prefetch.py  prefetch_server.py
amazon-kpi-automation/src/amazon_kpi/output/: __init__.py  file_exporter.py  formatters.py  sheets_client.py  templates.py
amazon-kpi-automation/src/amazon_kpi/processing/: __init__.py  aggregator.py  comparator.py  models.py
amazon-kpi-automation/src/amazon_kpi/scraper/: __init__.py  auth.py  extractors.py  navigation.py  sellerboard_client.py
amazon-kpi-automation/tests/: __init__.py
amazon-kpi-automation/tests/integration/: __init__.py
amazon-kpi-automation/tests/unit/: __init__.py  test_comparator.py  test_formatters.py  test_models.py  test_sp_api_client.py  test_sp_api_data_kiosk.py  test_sp_api_parsers.py  test_sp_api_queries.py
(+19 files in other folders)
